fix/overflow bug at filters

--- a/resources/assets/sass/components/_filters.scss
+++ b/resources/assets/sass/components/_filters.scss
@@ -1,6 +1,5 @@
 .filters {
     position: relative;
-    overflow: hidden;
     padding: 20px 0px;
     .search {
         i {
